[gd_scene load_steps=16 format=2]

[ext_resource path="res://NPCS/BS_NPC/Scott Smith.png" type="Texture" id=1]
[ext_resource path="res://NPCS/BS_NPC/Spark.png" type="Texture" id=2]
[ext_resource path="res://ScottSmith.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Smithing",
"speed": 6.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 8.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ null, null, SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), null, null, null ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
height = 12.0

[node name="StaticBody2D" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 3 )

[node name="ScottSmithSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Smithing"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 9 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Sparks" type="AnimatedSprite" parent="."]
position = Vector2( -15, 6 )
frames = SubResource( 11 )
frame = 5
playing = true

[node name="Interaction" type="Area2D" parent="."]
position = Vector2( -15, 6 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
position = Vector2( 13, 12 )
shape = SubResource( 12 )

[connection signal="body_entered" from="Interaction" to="." method="_on_Interaction_body_entered"]
[connection signal="body_exited" from="Interaction" to="." method="_on_Interaction_body_exited"]
